# SuperNova

./: .env  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.conf  PROGRESS_TRACKER.md  PROGRESS_TRACKER_v3.md  PROGRESS_TRACKER_v3_CHECKLIST.md  README.md  SECURITY.md  SYSTEM_RELATION_GRAPH.md  context_assembly.py  docker-compose.minimal.yml  docker-compose.yml  dynamic_router.py  loadtest.py  loop.py  nova-dashboard.jsx  procedural.py  production_ready_testing.md  setup.sh
.agent/: KNOWLEDGE_BASE.md  mcp-bridge.py
.agent/mcp-servers/: FIX-NO-SERVERS.md  SETUP.md  install.py
.agent/skills/: README.md  context-management.skill  create-plan.skill  notion-knowledge-capture.skill  observability-monitoring.skill  pptx.skill  spec-forge.skill  test-driven-development.skill  web-artifacts-builder.skill  xlsx.skill
.agents/summary/: .last_commit  architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.github/workflows/: ci.yml
.kiro/settings/: lsp.json
.serena/: project.yml
dashboard/: BUILD_VERIFICATION.md  DESIGN_SYNTHESIS.md  HOSTILE_AUDIT_REPORT.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_SUMMARY.md  PHASE1_AUDIT_REPORT.md  PHASE2_AUDIT_REPORT.md  PHASE3_AUDIT_REPORT.md  PHASE4_AUDIT_REPORT.md  PHASE4_SUMMARY.md  TYPESCRIPT_FIXES.md  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
dashboard/public/: manifest.json
dashboard/src/: App.css  App.jsx  App.tsx  NovaDashboard.jsx  NovaDashboard.tsx  grafana_dashboard.json  index.css  main.tsx  responsive.css
deploy/: Dockerfile
docs/: APPROVAL_THREAT_MODEL.md  ARCHITECTURE.md  MEMORY_SCHEMA.md  MULTI_AGENT_STATE.md  SKILL_DEVELOPMENT.md  production-configuration.md
logs/: phase12_audit.md  phase13_audit.md  phase14_audit.md  phase15_audit.md
logs/agent_test/: MANIFEST.md  MASTER_REPORT.md  agent_a_planner.md  agent_b_auditor.md  agent_c_scout.md  agent_d_inspector.md
logs/sync_audit/: api_auth_gap_analysis.md  auth_fix_summary.md  ci_pipeline_audit.md  circuit_breaker_summary.md  executor_critic_memory_summary.md  gitignore_security_audit.md  history_secrets_scan.md  orchestrator_planner_summary.md  output_filter_implementation.md  pr2_audit.md  pr3_audit.md  pr4_audit.md  pr5_audit.md  reasoning_pipeline_summary.md  sandbox_summary.md  sanitization_audit.md  shared_state_summary.md  (+3 more)
mcp_and_skills/: BACKUP_SIZE.txt  FILE_LIST.txt  MCP_INTEGRATION_SUMMARY.md  MCP_QUICK_REFERENCE.md  MCP_SERVERS.md  README-RESTORE.md  restore.sh
proof_bundle/: latest_bundle_path.txt
scripts/: build_proof_bundle.sh  validate_production_env.py  validate_repo_hygiene.py
supernova/: .coverage  README.md  __init__.py  alembic.ini  config.py  coverage.xml  pyproject.toml  runtime_config_guardrails.py
supernova/alembic/: env.py
supernova/alembic/versions/: 23aa65fd8071_initial_schema.py  b7c3e9f12a45_audit_logs.py
supernova/api/: __init__.py  auth.py  gateway.py  interrupts.py  main.py  websockets.py
supernova/api/routes/: __init__.py  agent.py  dashboard.py  mcp_routes.py  onboarding.py  preferences.py
supernova/core/: agent_timing.py  setup_progress.py  timing.py
supernova/core/agent/: __init__.py  critic.py  executor.py  interrupts.py  loop.py  memory_agent.py  orchestrator.py  planner.py  proactive.py  shared_state.py  trust_model.py
supernova/core/backup/: cli.py  manager.py
supernova/core/data/: __init__.py  delete.py  export.py  import_data.py
supernova/core/memory/: __init__.py  episodic.py  procedural.py  retrieval.py  salience.py  semantic.py  working.py
supernova/core/reasoning/: __init__.py  context_assembly.py  dynamic_router.py  pipeline.py  router.py  streaming.py  tool_augmented.py
supernova/core/resilience/: __init__.py  circuit_breaker.py
supernova/core/security/: __init__.py  middleware.py  sandbox.py  sanitizer.py  trusted_context.py
supernova/core/skills/: __init__.py  base.py  generator.py  sandbox.py
supernova/core/skills/builtin/: __init__.py  browser_skill.py  calendar_skill.py  email_skill.py  notes_skill.py  shell_skill.py
supernova/infrastructure/llm/: cost_controller.py  ollama_client.py
supernova/infrastructure/observability/: cli.py  health.py  logging.py  metrics.py  tracing.py
supernova/infrastructure/security/: audit.py  secrets.py  serializer.py
supernova/infrastructure/storage/: __init__.py  postgres.py  redis.py
supernova/infrastructure/tools/: __init__.py  registry.py
supernova/infrastructure/tools/builtin/: __init__.py  code_exec.py  file_ops.py  web_search.py
supernova/mcp/client/: mcp_client.py
supernova/mcp/tools/: mcp_tool_bridge.py
supernova/services/: agent_config.py  preferences.py
supernova/skills/: loader.py
supernova/tests/: conftest.py  test_adversarial_input.py  test_agent_routes.py  test_api_main.py  test_approval_security.py  test_audit_coverage.py  test_auth.py  test_backup.py  test_builtin_tools.py  test_code_exec_tool.py  test_context_assembly.py  test_cost_controller.py  test_critic_agent.py  test_dashboard.py  test_dashboard_auth_include_guardrail.py  test_dynamic_router.py  test_e2e.py  test_episodic.py  test_executor_agent.py  test_gateway.py  test_gateway_controls.py  test_gateway_route_auth_guardrails.py  test_gateway_token_guardrails.py  test_gateway_websocket_auth_guardrails.py  test_graceful_degradation.py  test_interrupts.py  test_loop_pure.py  test_mcp_api.py  test_mcp_client.py  test_memory_agent.py  test_memory_retrieval.py  test_multi_agent.py  test_multi_agent_e2e.py  test_observability.py  test_onboarding.py  test_preferences.py  test_preferences_service.py  test_procedural.py  test_registry.py  test_retrieval_quality.py  (+18 more)
supernova/tui/: __init__.py  __main__.py  app.py  client.py
supernova/tui/styles/: app.tcss
supernova/workers/: __init__.py  backup.py  celery_app.py  consolidation.py  heartbeat.py  maintenance.py  mcp_monitor.py
(+355 files in other folders)
