# SuperNova Build Configuration
# Modern Python packaging with hatchling build backend

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "supernova"
version = "2.0.0"
description = "Production-grade personal AI agent with persistent memory and autonomous cognition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "SuperNova Team" }
]
keywords = [
    "ai",
    "agent",
    "langgraph",
    "memory",
    "llm",
    "autonomous",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# =============================================================================
# Runtime Dependencies
# =============================================================================
dependencies = [
    # Core Agent Orchestration (Task 2.1.2)
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langchain-core>=0.3.0",
    
    # LLM Routing (Task 2.1.3)
    "litellm>=1.40.0",
    
    # Memory Systems (Task 2.1.4)
    "graphiti-core>=0.3.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "neo4j>=5.20.0",
    
    # API Layer (Task 2.1.5)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    
    # Background Tasks (Task 2.1.6)
    "celery[gevent]>=5.4.0",
    "celery-redbeat>=2.2.0",
    
    # Observability & Serialization (Task 2.1.7)
    "langfuse>=2.0.0",
    "msgpack>=1.0.8",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "structlog>=24.1.0",
    
    # Embedding & Tokenization (Task 2.1.8)
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    
    # MCP Client (Task 2.1.11)
    "mcp>=1.0.0",
    
    # Additional Utilities
    "aiofiles>=23.2.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "jsonschema>=4.22.0",
    "pyyaml>=6.0.1",
    "pendulum>=3.0.0",
    
    # TUI (Terminal User Interface)
    "textual>=3.0.0",
]

# =============================================================================
# Optional Dependencies
# =============================================================================
[project.optional-dependencies]
dev = [
    # Testing (Task 2.1.9)
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
    
    # Linting & Formatting (Task 2.1.9)
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    
    # Database Migrations (Task 2.1.9)
    "alembic>=1.13.0",
    
    # Type Stubs
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.0",
    "types-python-jose>=3.3.0",
    "types-aiofiles>=23.2.0",
]

# GPU acceleration (optional)
gpu = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]

# All optional dependencies
all = [
    "supernova[dev,gpu]",
]

# =============================================================================
# CLI Entry Points
# =============================================================================
[project.scripts]
supernova = "supernova.cli:main"
sn = "supernova.cli:main"
supernova-tui = "tui.__main__:main"

# =============================================================================
# Tool Configurations (Task 2.1.10)
# =============================================================================

# Ruff - Python linter and formatter
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # Pylint
    "PERF", # Perflint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["supernova"]

# MyPy - Static type checker
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "graphiti_core.*",
    "redbeat.*",
    "celery.*",
]
ignore_missing_imports = true

# Pytest - Testing framework
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=api",
    "--cov=core",
    "--cov=infrastructure",
    "--cov=mcp",
    "--cov=skills",
    "--cov=workers",
    "--cov=config",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:neo4j.*:",
]

# Coverage - Code coverage measurement
[tool.coverage.run]
source = [
    "api",
    "core",
    "infrastructure",
    "mcp",
    "skills",
    "workers",
    "config",
]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Hatch Build Configuration
# =============================================================================
[tool.hatch.version]
path = "supernova/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["supernova"]

[tool.hatch.build.targets.sdist]
include = [
    "/supernova",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/.github",
    "/.gitignore",
    "/tests",
]
